# pyrp

./: .gitignore  Taskfile.yml  Untitled.ipynb  flake.nix  main.py  play.py  pyproject.toml  test_main.py
