[project]
name = "pylab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.4",
    "scipy>=1.17",

    "pandas>=3.0",

    "matplotlib>=3.10",
    "seaborn>=0.13",

    "jupyterlab>=4.5",
    "ipywidgets>=8.1",

    "scikit-learn>=1.8",
]

[dependency-groups]
dev = [
    "pytest>=9.0",
    "ruff>=0.15",
]
