[project]
name = "pylab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "polars>=1.38",
    "matplotlib>=3.10",
    "seaborn>=0.13",
    "jupyterlab>=4.5",
    "ipywidgets>=8.1",
    "scikit-learn>=1.8",
    "pyperf>=2.10.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0",
    "ruff>=0.15",
]
